<resources>
    <string name="app_name">WOD Journal</string>

    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

    <string name="weight">Weight</string>
    <string name="reps">Rounds/Reps</string>
    <string name="time">Time</string>

    <string name="weight_prefix">Weight %s</string>
    <string name="reps_prefix">Rounds/Reps %d</string>
    <string name="time_prefix">Time %s</string>

    <string name="personal_records">Personal Records</string>
    <string name="personal_record">Personal Record</string>
    <string name="workout">Workout</string>
    <string name="workouts">Workouts</string>

    <string name="workout_custom">Workout custom</string>
    <string name="workout_result">Workout result</string>
    <string name="create_workout">Create workout</string>
    <string name="modify_workout">Modify workout</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="error_occurred">An error occurred</string>
    <string name="login_expired">Login session expired, please log in again</string>
    <string name="image_upload_failed">Image upload failed</string>

    <string name="weight_lifted">Weight Lifted (%s)</string>
    <string name="reps_completed">Rounds/Reps completed</string>
    <string name="time_spent">Time (hh:mm:ss)</string>

    <string name="rx">RX</string>
    <string name="rx_prefix">RX:</string>

    <string name="kg">kg</string>
    <string name="lb">lb</string>

    <string name="kg_suffix">"%.2f" kg</string>
    <string name="lb_suffix">"%.2f" lb</string>

    <string name="note">Notes</string>
    <string name="add_picture">Add picture</string>
    <string name="field_mandatory">This field is mandatory</string>

    <string name="saving">Saving…</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logging">Logging…</string>
    <string name="register">Register</string>
    <string name="registering">Registering…</string>

    <string name="loading">Loading…</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="storage_permission_denied">Operation cannot be completed without access to the storage.</string>

    <string name="login_to_continue">You need to log in to continue</string>

    <string name="delete">Delete</string>
    <string name="deleting">Deleting…</string>
    <string name="delete_record">Delete Record</string>
    <string name="delete_confirmation">Are you sure you want to delete it?</string>

    <string name="no_user">No user</string>

    <string name="feedback">Feedback</string>
    <string name="feedback_subject">Feedback %s Android App</string>
    <string name="feedback_body">Username: %1$s\nApp version: %2$s\nDevice info: %3$s - %4$d</string>

    <string name="options">Options</string>
    <string name="edit">Edit</string>

    <string name="unit_type">Unit Type</string>
    <string name="imperial">Imperial</string>

    <string name="history">History</string>
    <string name="description">Description:</string>

    <string name="log_result">Log result</string>

    <string name="select_image">Select image</string>

    <string name="password_limit">At least 6 characters</string>

    <string name="general_settings">General Settings</string>

    <string name="version_info">%1$s build %2$d</string>
</resources>
